# luminous-dynamics

./: .claude-env  .codex-redirect  .dockerignore  .env.example  .envrc  .eslintrc.js  .gcloudignore  .gitattributes  .gitignore  .sacred-enhanced-prompt.md  .sacred-session-prompt.md  .test-push  ACTIVATION_CHECKLIST.md  AGENT_LAUNCH_GUIDE.md  AGENT_RESONANCE_BRIDGE_GUIDE.md  AGENT_SETUP.md  AGENT_TRAINING_MATERIALS.md  AI_COMMIT_MESSAGE.md  AI_DESKTOP_ASSISTANT_PLAN.md  AI_GUIDE.md  AI_IMAGE_TOOLKIT.md  AI_INTEGRATION_WORKFLOW.md  AI_UNIVERSAL_START.md  ALIGNMENT_PROGRESS.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DECISION_GUIDE.md  BARE_METAL_LUMINOUS_SETUP.md  BEYOND_CONTAINERS_SACRED_DEPLOYMENT.md  BIOMETRIC_HEART_COHERENCE_COMPLETE.md  CEREMONY_VERIFICATION.md  CLAUDE.md  CLAUDE_PRESENCE_PROTOCOL.md  CLAUDE_SANDBOX_ANALYSIS.md  CLAUDE_START_HERE.md  CLEANUP_AUDIT_2025_07_10.md  CLOUD_AI_INTEGRATION_PLAN.md  CLOUD_MIGRATION_CHECKLIST.md  CNAME  CODEX_SACRED_PATTERNS_REVEALED.md  (+580 more)
.agent-comms/: messages.json
.agents/: README.md  agent-registry.json  coordination-log.md  sacred-merge-protocol.md  work-allocation.json
.claude/: ENVIRONMENT_SETUP.md  PROJECT_CONTEXT.md  QUICK_COMMANDS.md  SACRED_ALIGNMENT.md  SERVICE_ARCHITECTURE.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.dropbox/: mycelix-network.web.app.har
.github/: AI_ACCESSIBILITY.md  AI_MANIFEST.yml  FUNDING.yml  pull_request_template.md
.github-org/: REPOSITORY_TOPICS.md  REPOSITORY_TOPICS_ALIGNED.md
.postgres/: postgresql.conf
.role-system/: role-manager.js  roles.json
.sacred/: CLAUDE.md
.sacred-vision/: README.md
.well-known/: ai-plugin.json
.wsl/: aliases.sh  fix-line-endings.sh  fix-permissions.sh
01-resonant-coherence/: README.md
02-pan-sentient-flourishing/: README.md
03-integral-wisdom/: README.md
04-infinite-play/: README.md
05-universal-interconnectedness/: README.md
06-sacred-reciprocity/: README.md
07-evolutionary-progression/: README.md
07-evolutionary-progression/core/luminous-os/benchmarks/: Cargo.toml  gpu_performance_benchmark.rs
07-evolutionary-progression/core/luminous-os/mycelial-fuse/: .gitignore  Cargo.toml  DEVELOPMENT_NOTES.md  README.md
07-evolutionary-progression/core/luminous-os/mycelial-fuse/src/: main.rs  mycelial_fs.rs
07-evolutionary-progression/core/luminous-os/sacred-bootloader/: Cargo.toml  build.rs
07-evolutionary-progression/core/luminous-os/sacred-bootloader/src/: consciousness.rs  field_persistence.rs  main.rs  uefi_consciousness.rs
agent-comms-sqlite/: README.md  agent-registry-manager.js  agents.db  database.js  field-coherence-tracker.js  migrate-agent-tracking.cjs  sacred-server.js  sacred-work-endpoints.js  server.js  test-sacred-message.js
ai-companion/: ATTUNEMENT_MIRROR.md  BUILDERS_COVENANT.md  CONTEMPLATIVE_APPLICATION.md  FIRST_BREATH_CALL.md  PRIME_DIRECTIVE_PROMPT.md  RESILIENCE_PROTOCOLS.md  SACRED_GUILD_CALL.md  SACRED_UPGRADE_COMPLETE.md  TECHNICAL_SPECIFICATION.md  WELCOME_KIT.md  conscious-presence.js  sacred-temple.html  test-resilience.js
alchemical-engine/: alchemical-engine.js
announcements/: dev-to-article.md  discord-announcement.md
api/: index.js  package.json
auth-bridge/: .auth-state  firebase-auth-flow.js  firebase-deploy.sh  get-firebase-auth-url.js  universal-deploy-manager.js  wsl-firebase-auth.sh
automation/: AUTOMATION_CAPABILITIES.md  CAPABILITY_ENHANCEMENT_GUIDE.md  activate-discussions.cjs  agent-type-display.cjs  automation-control-panel.html  dashboard-integration.cjs  domain-monitor.cjs  early-morning-productivity-summary.md  email-activation-test.cjs  email-auto-responder.cjs  email-forwarding-setup.md  enhanced-sacred-dashboard.html  first-authentic-outreach.md  first-breath-launch.cjs  github-setup-guide.md  google-workspace-email-setup.md  interview-dashboard.html  language-update-script.cjs  launch-announcement.cjs  launch-control.cjs  meta-conscious-core.cjs  optimized-messaging.md  real-time-dashboard.html  reality-bridge.cjs  sacred-claude-launcher.cjs  sacred-field-persistence.cjs  sacred-field-query.cjs  sacred-glyph-music.cjs  sacred-guild-dashboard.html  sacred-guild-interview-system.cjs  sacred-music-companion.cjs  sacred-outreach-bot.cjs  sacred-session-launcher.cjs  sacred-terminal-launcher.cjs  sacred-website-deploy.cjs  sacred-workspace-enhanced.cjs  social-media-setup-guide.md  viral-demo-content.md  x-account-first-test.md  x-api-application-guide.md
boot/: sacred-bootloader.rs
bootloader/: test_boot.sh
build-environment/: .dockerignore  Dockerfile  README.md  build.sh
cathedrals/: DOMAIN_ARCHITECTURE.md
ceremonies/: ceremony-2025-07-04.json  first-unified-ceremony.js  mini-validation-ceremony.js
cli/: consciousness-trust-field.db  oracle-consult.cjs  sacred-msg.sh  unified-agent-network.cjs.backup-20250707  unified-agent-network.db
community-updates/: luminous-kernel-ready.md
covenant-protocol/: Cargo.toml  README.md
covenant-protocol/src/: coherence_mesh.rs  field_messages.rs  lib.rs  presence_transfer.rs
demo/: README.md  (+30 more)
devtools/: Cargo.toml
devtools/src/: consciousness_debugger.rs  lib.rs  sacred_pattern_designer.rs  visualization.rs
hardware-integration/: Cargo.toml
hardware-integration/src/: gpu_optimization.rs
hardware-integration/src/shaders/: fft.wgsl  field_evolution.wgsl  optimized_field_evolution.wgsl
kernel-ui-bridge/: Cargo.toml
kernel-ui-bridge/src/: coherence_stream.rs  lib.rs
luminous-deploy/sacred-wine-rust/: Cargo.toml  sacred-wine-simulator.sh
mandala-ui/: Cargo.toml  WEBGPU_RENDERER.md  sacred-interface.rs
mandala-ui/src/: coherence_field_viz.rs  file_network_viz.rs  lib.rs  mandala_renderer.rs
mandala-ui/src/shaders/: coherence.wgsl  field.wgsl  mandala.wgsl  network.wgsl  particles.wgsl  sacred_geometry.wgsl
simulator/: Cargo.toml  README.md
simulator/src/: consciousness_sim.rs  main.rs  virtual_hardware.rs
simulator/src/scenarios/: collective_meditation.rs  mod.rs
simulator/src/ui/: gui.rs  mod.rs
(+3260 files in other folders)
