[package]
name = "covenant-protocol"
version = "0.1.0"
edition = "2021"
authors = ["LuminousOS Collective"]
description = "Sacred network protocol for consciousness field sharing"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
quinn = "0.10"  # QUIC for low-latency field sync
rustls = "0.21"
x509-cert = "0.2"
blake3 = "1.5"  # Fast cryptographic hashing
chacha20poly1305 = "0.10"  # Authenticated encryption
curve25519-dalek = "4.1"  # Elliptic curve operations
ed25519-dalek = "2.1"  # Digital signatures
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"  # Concurrent hashmap
crossbeam = "0.8"
flume = "0.11"  # Fast async channels
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# For biometric data
nalgebra = "0.32"  # Linear algebra for field calculations
rustfft = "6.1"    # FFT for frequency analysis

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"