[package]
name = "luminous-devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
egui = "0.24"
eframe = "0.24"
rfd = "0.12"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

# Visualization
plotters = "0.3"
colorgrad = "0.6"
lyon = "1.0"
image = "0.24"

# Data processing
ndarray = "0.15"
rustfft = "6.1"
num-complex = "0.4"
statrs = "0.16"

# Consciousness integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time and profiling
chrono = "0.4"
hdrhistogram = "7.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Pattern design
svg = "0.14"
resvg = "0.37"
usvg = "0.37"

[[bin]]
name = "consciousness-debugger"
path = "src/bin/consciousness_debugger.rs"

[[bin]]
name = "sacred-pattern-designer"
path = "src/bin/sacred_pattern_designer.rs"

[[bin]]
name = "coherence-profiler"
path = "src/bin/coherence_profiler.rs"