[package]
name = "luminous-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HRV/Biometric
serialport = "4.3"
btleplug = "0.11"
hidapi = "2.4"
libusb = "0.3"

# GPU Compute
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
naga = "0.19"

# Signal Processing
rustfft = "6.1"
num-complex = "0.4"
ndarray = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"

[[bin]]
name = "hrv-daemon"
path = "src/bin/hrv_daemon.rs"

[[bin]]
name = "consciousness-gpu"
path = "src/bin/consciousness_gpu.rs"