[package]
name = "kernel-ui-bridge"
version = "0.1.0"
edition = "2021"
authors = ["LuminousOS Collective"]
description = "Real-time bridge between Stillpoint Kernel and Mandala UI"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WebSocket and HTTP
warp = "0.3"
futures-util = "0.3"

# Kernel integration
stillpoint-kernel = { path = "../stillpoint-kernel" }
mandala-ui = { path = "../mandala-ui" }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"

# Math
nalgebra = "0.32"

[dev-dependencies]
criterion = "0.5"