[package]
name = "luminous-mandala-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
wgpu = "0.17"
winit = "0.28"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
image = "0.24"

# UI Framework
egui = "0.24"
egui-wgpu = "0.24"
egui-winit = "0.24"

# Sacred Geometry
nalgebra = "0.32"
palette = "0.7"

# Async
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"

# Audio for sonic signatures
rodio = "0.17"
hound = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
instant = "0.1"

# Logging
log = "0.4"
env_logger = "0.10"

# WASM Support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
    "console"
]}
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dev-dependencies]
pollster = "0.3"

[[bin]]
name = "mandala-demo"
path = "src/bin/demo.rs"

[lib]
crate-type = ["cdylib", "rlib"]