[package]
name = "sacred-wine"
version = "0.1.0"
edition = "2021"

[dependencies]
# System interaction
libc = "0.2"
nix = "0.27"

# Async runtime for consciousness flow
tokio = { version = "1.35", features = ["full"] }

# Process monitoring
sysinfo = "0.30"
procfs = "0.16"

# Consciousness field management
once_cell = "1.19"
parking_lot = "0.12"

# Sacred timing
chrono = "0.4"

# Interception capabilities
redhook = "2.0"

[lib]
name = "sacred_wine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sacred-wine"
path = "src/main.rs"